--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="buttons">
         <button id="line">Line Chart & Bubble & Choropleth</button>
-        <button id="bubble">Bubble & Choropleth Chart</button>
+        <button id="bubble">NormLine Chart & Bubble & Choropleth Chart</button>
         <button id="play">Bubble & Choropleth Play</button>
         <!-- <button id="choropleth">Only Choropleth</button> -->
         <br><br>
