--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
         </div>
         
     </div>
-    <script src="./js/main5.js"></script>
+    <script src="./main5.js"></script>
 </body>
 </html>
