--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h1 id="title">Smoke & Alcohol Visualization</h1>
 
     <div id="buttons">
-        <button id="line">Line Chart & Bubble & Choropleth</button>
-        <button id="bubble">NormLine Chart & Bubble & Choropleth Chart</button>
+        <!-- <button id="line">Line Chart & Bubble & Choropleth</button> -->
+        <button id="bubble">Parellel Coordinate Chart & ScatterPlot & Choropleth Chart</button>
         <button id="play">Bubble & Choropleth Play</button>
         <!-- <button id="choropleth">Only Choropleth</button> -->
         <br><br>
